Package_Tools/include-C/gsl/in_arbeit/fertig/gsl_multilarge_nlinear.pp


function gsl_multilarge_nlinear_alloc(T:Pgsl_multilarge_nlinear_type; params:Pgsl_multilarge_nlinear_parameters; n:Tsize_t; p:Tsize_t):Pgsl_multilarge_nlinear_workspace;cdecl;external;
procedure gsl_multilarge_nlinear_free(w:Pgsl_multilarge_nlinear_workspace);cdecl;external;
function gsl_multilarge_nlinear_default_parameters:Tgsl_multilarge_nlinear_parameters;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_init(x:Pgsl_vector; fdf:Pgsl_multilarge_nlinear_fdf; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_winit(x:Pgsl_vector; wts:Pgsl_vector; fdf:Pgsl_multilarge_nlinear_fdf; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
function gsl_multilarge_nlinear_iterate(w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_avratio(w:Pgsl_multilarge_nlinear_workspace):Tdouble;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_rcond(rcond:Pdouble; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
function gsl_multilarge_nlinear_covar(covar:Pgsl_matrix; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_driver(maxiter:Tsize_t; xtol:Tdouble; gtol:Tdouble; ftol:Tdouble; callback:procedure (iter:Tsize_t; params:pointer; w:Pgsl_multilarge_nlinear_workspace); 
           callback_params:pointer; info:Plongint; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_name(w:Pgsl_multilarge_nlinear_workspace):Pchar;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_position(w:Pgsl_multilarge_nlinear_workspace):Pgsl_vector;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_residual(w:Pgsl_multilarge_nlinear_workspace):Pgsl_vector;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_step(w:Pgsl_multilarge_nlinear_workspace):Pgsl_vector;cdecl;external;
(* Const before type ignored *)
function gsl_multilarge_nlinear_niter(w:Pgsl_multilarge_nlinear_workspace):Tsize_t;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_trs_name(w:Pgsl_multilarge_nlinear_workspace):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_eval_f(fdf:Pgsl_multilarge_nlinear_fdf; x:Pgsl_vector; swts:Pgsl_vector; y:Pgsl_vector):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_eval_df(TransJ:TCBLAS_TRANSPOSE_t; x:Pgsl_vector; f:Pgsl_vector; u:Pgsl_vector; swts:Pgsl_vector; 
           h:Tdouble; fdtype:Tgsl_multilarge_nlinear_fdtype; fdf:Pgsl_multilarge_nlinear_fdf; v:Pgsl_vector; JTJ:Pgsl_matrix; 
           work:Pgsl_vector):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_eval_fvv(h:Tdouble; x:Pgsl_vector; v:Pgsl_vector; f:Pgsl_vector; swts:Pgsl_vector; 
           fdf:Pgsl_multilarge_nlinear_fdf; yvv:Pgsl_vector; work:Pgsl_vector):longint;cdecl;external;
{ convergence.c  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_test(xtol:Tdouble; gtol:Tdouble; ftol:Tdouble; info:Plongint; w:Pgsl_multilarge_nlinear_workspace):longint;cdecl;external;
{ fdjac.c  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_df(h:Tdouble; fdtype:Tgsl_multilarge_nlinear_fdtype; x:Pgsl_vector; wts:Pgsl_vector; fdf:Pgsl_multilarge_nlinear_fdf; 
           f:Pgsl_vector; J:Pgsl_matrix; work:Pgsl_vector):longint;cdecl;external;
{ fdfvv.c  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_multilarge_nlinear_fdfvv(h:Tdouble; x:Pgsl_vector; v:Pgsl_vector; f:Pgsl_vector; J:Pgsl_matrix; 
           swts:Pgsl_vector; fdf:Pgsl_multilarge_nlinear_fdf; fvv:Pgsl_vector; work:Pgsl_vector):longint;cdecl;external;
{ top-level algorithms  }
(* Const before type ignored *)
  var
    gsl_multilarge_nlinear_trust : Pgsl_multilarge_nlinear_type;cvar;external;
{ trust region subproblem methods  }
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_lm : Pgsl_multilarge_nlinear_trs;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_lmaccel : Pgsl_multilarge_nlinear_trs;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_dogleg : Pgsl_multilarge_nlinear_trs;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_ddogleg : Pgsl_multilarge_nlinear_trs;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_subspace2D : Pgsl_multilarge_nlinear_trs;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_trs_cgst : Pgsl_multilarge_nlinear_trs;cvar;external;
{ scaling matrix strategies  }
(* Const before type ignored *)
    gsl_multilarge_nlinear_scale_levenberg : Pgsl_multilarge_nlinear_scale;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_scale_marquardt : Pgsl_multilarge_nlinear_scale;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_scale_more : Pgsl_multilarge_nlinear_scale;cvar;external;
{ linear solvers  }
(* Const before type ignored *)
    gsl_multilarge_nlinear_solver_cholesky : Pgsl_multilarge_nlinear_solver;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_solver_mcholesky : Pgsl_multilarge_nlinear_solver;cvar;external;
(* Const before type ignored *)
    gsl_multilarge_nlinear_solver_none : Pgsl_multilarge_nlinear_solver;cvar;external;
{$endif}
{ __GSL_MULTILARGE_NLINEAR_H__  }

implementation


end.
